--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Housing Price Prediction</title>
+    <title>🏠 California Housing Price Predictor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Google Font -->
@@ -201,3 +201,4 @@
 
 </body>
 </html>
+
